@@ -18,9 +18,11 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import org.apache.tuweni.bytes.Bytes32;
@@ -55,6 +57,8 @@ class SyncCommitteeScheduledDutiesTest {
 
   private final Validator validator1 = createValidator();
   private final Validator validator2 = createValidator();
+  private final List<ValidatorAndCommitteeIndices> singleValidatorList =
+      List.of(new ValidatorAndCommitteeIndices(validator1, 1));
 
   @Test
   void shouldSubscribeToSubnets() {
@@ -76,6 +80,15 @@ class SyncCommitteeScheduledDutiesTest {
                     50, Set.of(1, 2, 3), PERIOD_END_EPOCH.increment()),
                 new SyncCommitteeSubnetSubscription(
                     70, Set.of(2, 6), PERIOD_END_EPOCH.increment())));
+  }
+
+  @Test
+  void shouldNotSubscribeToSubnetsWithoutValidatorsPresent() {
+    final SyncCommitteeScheduledDuties duties = validBuilder().build();
+
+    duties.subscribeToSubnets();
+    verifyNoInteractions(chainHeadTracker);
+    verifyNoInteractions(validatorApiChannel);
   }
 
   @Test
@@ -105,6 +118,18 @@ class SyncCommitteeScheduledDutiesTest {
   }
 
   @Test
+  void shouldNotPerformDutyWhenNoActiveValidatorsAndChainHeadEmpty() {
+    final UInt64 slot = UInt64.valueOf(25);
+    when(chainHeadTracker.getCurrentChainHead(slot)).thenReturn(Optional.empty());
+
+    final SyncCommitteeScheduledDuties duties = validBuilder().build();
+    final SafeFuture<DutyResult> result = duties.performProductionDuty(slot);
+    reportDutyResult(slot, result);
+
+    verifyNoInteractions(validatorLogger);
+  }
+
+  @Test
   void shouldUseSameBlockRootForProductionAndAggregation() {
     final UInt64 slot = UInt64.valueOf(25);
     final Bytes32 blockRoot = dataStructureUtil.randomBytes32();
@@ -119,7 +144,7 @@ class SyncCommitteeScheduledDutiesTest {
     when(aggregationDuty.produceAggregates(slot, blockRoot))
         .thenReturn(SafeFuture.completedFuture(expectedDutyResult));
 
-    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks();
+    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks(singleValidatorList);
 
     assertThat(duties.performProductionDuty(slot)).isCompletedWithValue(expectedDutyResult);
     assertThat(duties.performAggregationDuty(slot)).isCompletedWithValue(expectedDutyResult);
@@ -135,17 +160,12 @@ class SyncCommitteeScheduledDutiesTest {
     final SafeFuture<DutyResult> result = duties.performAggregationDuty(UInt64.ZERO);
     reportDutyResult(UInt64.ZERO, result);
 
-    verify(validatorLogger)
-        .dutyFailed(
-            eq(TYPE),
-            eq(UInt64.ZERO),
-            eq(Collections.emptySet()),
-            any(IllegalStateException.class));
+    verifyNoInteractions(validatorLogger);
   }
 
   @Test
   void shouldNotProduceAggregatesIfNoBlockFoundForSignatures() {
-    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks();
+    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks(singleValidatorList);
     when(chainHeadTracker.getCurrentChainHead(any())).thenReturn(Optional.empty());
 
     assertThat(duties.performProductionDuty(UInt64.ZERO)).isCompleted();
@@ -157,13 +177,13 @@ class SyncCommitteeScheduledDutiesTest {
         .dutyFailed(
             eq(TYPE),
             eq(UInt64.ZERO),
-            eq(Collections.emptySet()),
+            eq(Set.of(validator1.getPublicKey().toAbbreviatedString())),
             any(IllegalStateException.class));
   }
 
   @Test
   void shouldNotProduceAggregatesIfSignaturesLastProducedForEarlierSlot() {
-    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks();
+    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks(singleValidatorList);
     when(chainHeadTracker.getCurrentChainHead(any()))
         .thenReturn(Optional.of(dataStructureUtil.randomBytes32()));
 
@@ -176,13 +196,13 @@ class SyncCommitteeScheduledDutiesTest {
         .dutyFailed(
             eq(TYPE),
             eq(UInt64.ZERO),
-            eq(Collections.emptySet()),
+            eq(Set.of(validator1.getPublicKey().toAbbreviatedString())),
             any(IllegalStateException.class));
   }
 
   @Test
   void shouldNotProduceAggregatesIfSignaturesLastProducedForLaterSlot() {
-    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks();
+    final SyncCommitteeScheduledDuties duties = createScheduledDutiesWithMocks(singleValidatorList);
     when(chainHeadTracker.getCurrentChainHead(any()))
         .thenReturn(Optional.of(dataStructureUtil.randomBytes32()));
 
@@ -195,7 +215,7 @@ class SyncCommitteeScheduledDutiesTest {
         .dutyFailed(
             eq(TYPE),
             eq(UInt64.ZERO),
-            eq(Collections.emptySet()),
+            eq(Set.of(validator1.getPublicKey().toAbbreviatedString())),
             any(IllegalStateException.class));
   }
 
@@ -210,12 +230,17 @@ class SyncCommitteeScheduledDutiesTest {
   }
 
   private SyncCommitteeScheduledDuties createScheduledDutiesWithMocks() {
+    return createScheduledDutiesWithMocks(Collections.emptyList());
+  }
+
+  private SyncCommitteeScheduledDuties createScheduledDutiesWithMocks(
+      final List<ValidatorAndCommitteeIndices> validatorAndCommitteeIndices) {
     return new SyncCommitteeScheduledDuties(
         productionDuty,
         aggregationDuty,
         chainHeadTracker,
         validatorApiChannel,
-        Collections.emptyList(),
+        validatorAndCommitteeIndices,
         UInt64.ZERO);
   }
 
